--- a/css/stripe-payment-element.css
+++ b/css/stripe-payment-element.css
@@ -35,10 +35,7 @@ form {
 }
 
 #payment-message {
-  color: rgb(105, 115, 134);
-  font-size: 16px;
-  line-height: 20px;
-  padding-top: 12px;
+  color: rgb(255 255 255);
   text-align: center;
 }
 
